2002-08-19  Luke Gorrie  <luke@bluetail.com>

	* elisp/erl-service.el, distel.erl (fprof): Fixed the fprof
	interface to handle multiple processes. Used the compiler as a
	test case.

	The presentation of results is seriously inadequate for such large
	quantities of data. What's needed is a sexy tree layout like the
	OptimizeIt profiler for Java has.

2002-08-18  david wallin  <david@dolly.csis.ul.ie>

	* elisp/distel-ie.el (erl-ie-evaluate): Can now receive messages 
	that should go into the minibuffer.

	* elisp/distel-ie.el (erl-ie-evaluate): Slight correction on how
	the output of formatted.

	* elisp/distel-ie.el (erl-ie-fiddle-with-me): New function. Copies
	the content of the current buffer into a session. So you can 'fiddle'
	away on the code without screwing up the original file. 
	(Suggestions for name change are welcome).

	* erl/distel_ie.erl (ensure_registered/0): Updates the 
	group leader on an already running 'distel_ie' process. 
	So if you do M-x erl-ie-session and connect to a node where 
	distel_ie is already running, the stdin/stdout is correctly
	redirected.

	* erl/distel_ie.erl (evaluate/2): Defining a new function returns 
	the function name and arity.

	* erl/distel_ie.erl (get_function_name/1): Returns the arity as well.
	
2002-08-17  Luke Gorrie  <luke@bluetail.com>

	* Buildscripts: Revamped the makefiles, inspired by host fast
	Ghostscript does "the null make" without recursions. Stole all the
	code from Darius Bacon's idel package - very handy.

	Anyhoo, now you can do "./configure && make && make install" and
	you get the files installed in all the usual bits of /usr/local/ -
	even the manual in your Info directory.

	For really lazy people, you can do "make conf_install", which will
	patch your .emacs and .erlang to setup the right hooks to run
	everything (this Should Be perfectly safe, not that I'd trust
	someone else's program to do it to mine..)

	You can also do "make dist" to build a distributable package (in