@@ -1,17 +1,24 @@
-;;; erlang-mode-ext.el --- Extensions to erlang-mode based on Distel
+;;; distel.el --- Top-level of distel package, loads all subparts
 
 ;; Prerequisites
-(require 'erl)
 (require 'erlang)
 (require 'easy-mmode)
-(require 'erl-service)
 
 ;; Compatibility with XEmacs
 (unless (fboundp 'define-minor-mode)
   (defalias 'define-minor-mode 'easy-mmode-define-minor-mode))
 
-;; Debugger
+;; Distel modules
+
+(require 'erl)
+(require 'erl-service)
 (require 'edb)
+
+(defun distel-erlang-mode-hook ()
+  "Function to enable the Distel extensions to Erlang mode.
+You can add this to erlang-mode-hook with:
+  (add-hook 'erlang-mode-hook 'distel-erlang-mode-hook)"
+  (erlang-extended-mode t))
 
 ;; Extended feature key bindings (C-x C-d prefix)
 
@@ -42,4 +49,4 @@
     ("\M-,"      . erl-find-source-unwind) ; usually `tags-loop-continue'
     ))
 
-(provide 'erlang-mode-ext)
+(provide 'distel)
